Bug 442986 - Icons in radio buttons positioned under text
Summary: Icons in radio buttons positioned under text
Status: RESOLVED FIXED
Alias: None
Product: frameworks-qqc2-desktop-style
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.86.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 462444 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-09-26 14:40 UTC by 61kylyqt
Modified: 2023-01-11 20:19 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.102
Sentry Crash Report:


Attachments
Screenshot of the issue (26.93 KB, image/png)
2021-09-26 14:40 UTC, 61kylyqt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 61kylyqt 2021-09-26 14:40:05 UTC
Created attachment 141925 [details]
Screenshot of the issue

SUMMARY


STEPS TO REPRODUCE
1. Open System Settings > Firewall (plasma-firewall);
2. Click in "add rule".

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: Fedora 34
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Kernel Version: 5.13.19-200.fc34.x86_64 (64-bit)
Graphics Platform: X11
Processors: 4 × Intel Core Processor (Skylake, IBRS)
Memory: 3.8 GiB of RAM
Graphics Processor: llvmpipe

ADDITIONAL INFORMATION
Comment 1 David Edmundson 2021-09-26 19:57:41 UTC
It's part of an arrow:

            QQC2.RadioButton {
                id: incoming
                text: i18n("Incoming")
                icon.name: "arrow-down"


I've never seen an icon on a radio button before, I bet our QQC2 style doesn't handle that
Comment 2 Nate Graham 2021-09-27 20:22:01 UTC
Indeed, both of those statements are accurate. :)
Comment 3 Nate Graham 2021-09-27 21:59:16 UTC
Interestingly enough, the code for RadioButton and CheckBox in qqc2-desktop style is virtual identical, yet CheckBox handles icons just fine, while RadioButton does not.
Comment 4 Nate Graham 2022-11-30 22:05:46 UTC
*** Bug 462444 has been marked as a duplicate of this bug. ***
Comment 5 ratijas 2023-01-11 10:31:08 UTC
Git commit c0164de6d33e36164e21408cbf1771215e177c2b by ivan tkachenko.
Committed on 09/01/2023 at 20:04.
Pushed by ratijas into branch 'master'.

RadioButton: Add support for icons, just like in CheckBox

In fact, they already shared all the required code except this switch.

M  +2    -3    plugin/kquickstyleitem.cpp

https://invent.kde.org/frameworks/qqc2-desktop-style/commit/c0164de6d33e36164e21408cbf1771215e177c2b