RadioButton: Add support for icons, just like in CheckBox

In fact, they already shared all the required code except this switch.

BUG: 442986